--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "classnames": "^2.3.2",
+    "prisma": "^5.3.1",
     "react-icons": "^5.3.0",
     "zod": "^3.23.8"
   }
