--- a/issue-tracker/package.json
+++ b/issue-tracker/package.json
@@ -20,6 +20,11 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwindcss": "3.4.10",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "@prisma/client": "^5.3.1",
+    "classnames": "^2.3.2",
+    "prisma": "^5.3.1",
+    "react-icons": "^5.3.0",
+    "zod": "^3.22.2"
   }
 }
