--- a/issue-tracker/package.json
+++ b/issue-tracker/package.json
@@ -9,22 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.3.1",
+    "@radix-ui/themes": "^1.1.2",
     "@types/node": "22.5.2",
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
+    "classnames": "^2.3.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.7",
     "next": "14.2.7",
     "postcss": "8.4.44",
+    "prisma": "^5.3.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-icons": "^5.3.0",
     "tailwindcss": "3.4.10",
     "typescript": "5.5.4",
-    "@prisma/client": "^5.3.1",
-    "classnames": "^2.3.2",
-    "prisma": "^5.3.1",
-    "react-icons": "^5.3.0",
     "zod": "^3.22.2"
   }
 }
